HHH-20497 - Consolidate bootstrap source collection and processing